--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,17 @@
 }
 .app__posts {
   padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+.app__postsright {
+  margin-left: 20px;
 }
 
 .app__header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
   background-color: #fafafa;
   padding: 20px;
   object-fit: contain;
